FUSETOOLS-3593: Fuse Integration Project templates cannot be run with JDK17
Signed-off-by: Dominik Jelinek <djelinek@redhat.com>